--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,27 +142,38 @@ jobs:
         if: inputs.platform == 'iOS'
         run: |
           echo "Checking provisioning profiles..."
+          EXPECTED_BUNDLE_ID="com.stash.sdkdemo"
+          
           for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
             echo ""
             echo "Profile: $(basename "$profile")"
-            security cms -D -i "$profile" | plutil -p - | grep -E '(Name|TeamIdentifier|UUID|Entitlements|com.apple.InAppPurchase)' || true
+            PROFILE_DATA=$(security cms -D -i "$profile" 2>/dev/null)
+            PROFILE_NAME=$(echo "$PROFILE_DATA" | plutil -extract Name raw - 2>/dev/null || echo "Unknown")
+            PROFILE_BUNDLE_ID=$(echo "$PROFILE_DATA" | plutil -extract Entitlements.application-identifier raw - 2>/dev/null | sed 's/.*\.//' || echo "")
+            PROFILE_UUID=$(echo "$PROFILE_DATA" | plutil -extract UUID raw - 2>/dev/null || echo "Unknown")
+            
+            echo "  Name: $PROFILE_NAME"
+            echo "  Bundle ID: $PROFILE_BUNDLE_ID"
+            echo "  UUID: $PROFILE_UUID"
+            
+            # Check for IAP entitlement
+            if echo "$PROFILE_DATA" | grep -q "com.apple.InAppPurchase"; then
+              echo "  ✅ Has In-App Purchase entitlement"
+            else
+              echo "  ⚠️  No explicit In-App Purchase entitlement in profile"
+              if [ "$PROFILE_BUNDLE_ID" = "$EXPECTED_BUNDLE_ID" ]; then
+                echo "     (But App ID has IAP enabled - Xcode will add entitlement during build)"
+              fi
+            fi
+            
+            # Show full entitlements if available
+            echo "$PROFILE_DATA" | plutil -extract Entitlements raw - 2>/dev/null | head -20 || true
             echo "---"
           done
           
-          # Check if any profile has In-App Purchase capability
-          HAS_IAP=false
-          for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
-            if security cms -D -i "$profile" | grep -q "com.apple.InAppPurchase"; then
-              HAS_IAP=true
-              echo "✅ Found profile with In-App Purchase: $(basename "$profile")"
-              break
-            fi
-          done
-          
-          if [ "$HAS_IAP" = "false" ]; then
-            echo "⚠️  WARNING: No provisioning profile with In-App Purchase capability found"
-            echo "The app may require In-App Purchase capability. If the build fails, ensure your App ID has In-App Purchase enabled in App Store Connect."
-          fi
+          echo ""
+          echo "Note: App Store provisioning profiles may not explicitly list all entitlements."
+          echo "If the App ID has In-App Purchase enabled, Xcode will add the entitlement during the build."
       
       - name: Verify iOS setup
         if: inputs.platform == 'iOS'
@@ -288,26 +299,59 @@ jobs:
           echo "Build configuration updated for device-only build"
           
           # Get the provisioning profile UUID for manual signing
-          # Prefer a profile with In-App Purchase capability
+          # Look for a profile that matches our bundle ID
+          # Note: App Store profiles may not explicitly list IAP entitlement, but if the App ID has IAP enabled,
+          # Xcode will add the entitlement during the build process
           PROFILE_PATH=""
           PROFILE_UUID=""
+          EXPECTED_BUNDLE_ID="com.stash.sdkdemo"
           
-          # First, try to find a profile with In-App Purchase
+          echo "Searching for provisioning profile matching bundle ID: $EXPECTED_BUNDLE_ID"
+          
+          # First, try to find a profile that matches our bundle ID and has IAP entitlement explicitly
           for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
-            if security cms -D -i "$profile" | grep -q "com.apple.InAppPurchase"; then
-              PROFILE_PATH="$profile"
-              PROFILE_UUID=$(basename "$profile" .mobileprovision)
-              echo "✅ Found profile with In-App Purchase: $PROFILE_UUID"
-              break
+            PROFILE_DATA=$(security cms -D -i "$profile" 2>/dev/null)
+            PROFILE_BUNDLE_ID=$(echo "$PROFILE_DATA" | plutil -extract Entitlements.application-identifier raw - 2>/dev/null | sed 's/.*\.//' || echo "")
+            
+            # Check if bundle ID matches
+            if [ "$PROFILE_BUNDLE_ID" = "$EXPECTED_BUNDLE_ID" ]; then
+              # Check if it has IAP entitlement explicitly listed
+              if echo "$PROFILE_DATA" | grep -q "com.apple.InAppPurchase"; then
+                PROFILE_PATH="$profile"
+                PROFILE_UUID=$(basename "$profile" .mobileprovision)
+                PROFILE_NAME=$(echo "$PROFILE_DATA" | plutil -extract Name raw - 2>/dev/null || echo "Unknown")
+                echo "✅ Found profile with IAP entitlement: $PROFILE_NAME ($PROFILE_UUID)"
+                break
+              fi
             fi
           done
           
-          # If no IAP profile found, use the first available profile
+          # If no profile with explicit IAP found, use any profile that matches our bundle ID
+          # The App ID has IAP enabled, so Xcode will add the entitlement during build
+          if [ -z "$PROFILE_PATH" ]; then
+            for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
+              PROFILE_DATA=$(security cms -D -i "$profile" 2>/dev/null)
+              PROFILE_BUNDLE_ID=$(echo "$PROFILE_DATA" | plutil -extract Entitlements.application-identifier raw - 2>/dev/null | sed 's/.*\.//' || echo "")
+              
+              if [ "$PROFILE_BUNDLE_ID" = "$EXPECTED_BUNDLE_ID" ]; then
+                PROFILE_PATH="$profile"
+                PROFILE_UUID=$(basename "$profile" .mobileprovision)
+                PROFILE_NAME=$(echo "$PROFILE_DATA" | plutil -extract Name raw - 2>/dev/null || echo "Unknown")
+                echo "✅ Found profile matching bundle ID: $PROFILE_NAME ($PROFILE_UUID)"
+                echo "ℹ️  Note: IAP entitlement not explicitly listed in profile, but App ID has IAP enabled"
+                echo "   Xcode will automatically add the IAP entitlement during the build"
+                break
+              fi
+            done
+          fi
+          
+          # If still no profile found, use the first available App Store profile as fallback
           if [ -z "$PROFILE_PATH" ]; then
           PROFILE_PATH=$(ls ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision | head -1)
           PROFILE_UUID=$(basename "$PROFILE_PATH" .mobileprovision)
-            echo "⚠️  Using profile without In-App Purchase: $PROFILE_UUID"
-            echo "⚠️  WARNING: This may cause build failures if the app requires In-App Purchase"
+            PROFILE_NAME=$(security cms -D -i "$PROFILE_PATH" 2>/dev/null | plutil -extract Name raw - 2>/dev/null || echo "Unknown")
+            echo "⚠️  Using first available profile: $PROFILE_NAME ($PROFILE_UUID)"
+            echo "⚠️  WARNING: Profile may not match bundle ID or may not have IAP capability"
           fi
           
           echo "PROFILE_UUID=$PROFILE_UUID" >> $GITHUB_ENV
@@ -317,6 +361,24 @@ jobs:
           ACTUAL_UUID=$(security cms -D -i "$PROFILE_PATH" | plutil -extract UUID raw - 2>/dev/null || echo "$PROFILE_UUID")
           echo "ACTUAL_PROFILE_UUID=$ACTUAL_UUID" >> $GITHUB_ENV
           echo "Actual profile UUID: $ACTUAL_UUID"
+          
+          # Check if the selected profile has IAP entitlement
+          PROFILE_DATA=$(security cms -D -i "$PROFILE_PATH" 2>/dev/null)
+          if echo "$PROFILE_DATA" | grep -q "com.apple.InAppPurchase"; then
+            echo "✅ Selected profile has In-App Purchase entitlement"
+          else
+            echo "⚠️  WARNING: Selected profile does NOT have explicit In-App Purchase entitlement"
+            echo "   Profile: $PROFILE_NAME"
+            echo "   Bundle ID: $(echo "$PROFILE_DATA" | plutil -extract Entitlements.application-identifier raw - 2>/dev/null | sed 's/.*\.//' || echo "Unknown")"
+            echo ""
+            echo "   If the build fails with IAP errors:"
+            echo "   1. Verify the App ID 'com.stash.sdkdemo' has In-App Purchase enabled in Apple Developer Console"
+            echo "   2. Regenerate the provisioning profile in Apple Developer Console to include IAP"
+            echo "   3. The profile will be automatically updated when downloaded via API"
+            echo ""
+            echo "   Note: With manual signing, Xcode requires the profile to explicitly include all entitlements."
+            echo "   Even if the App ID has IAP enabled, the profile must include it for manual signing to work."
+          fi
           
           # Ensure App Store profiles are accessible to Xcode
           # Xcode looks in both ~/Library/MobileDevice/Provisioning Profiles/ and
