--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,16 @@
+# iOS Build Notes:
+# - For cloud builds, keep Unity project signing set to manual with the specified provisioning profile.
+# - Provisioning Profile UUID: 5dec23b8-fdeb-4122-b059-dbc982dbc44f (App ID: com.stash.sdkdemo)
+# - Do NOT change the signing method for UnityFramework or GameAssembly; leave as automatic.
+# - Signing Certificate: Apple Distribution: Fractal Wagmi Inc. (DB5KZDZYT5), set via IOS_P12_BASE64.
+# - Provisioning Profile: DB5KZDZYT5.com.stash.sdkdemo, set via IOS_PROFILE_UUID = 5dec23b8-fdeb-4122-b059-dbc982dbc44f.
+# - To export IPA and upload to TestFlight, provide App Store Connect API key and issuer ID in secrets:
+#   - secrets.APPSTORE_PRIVATE_KEY
+#   - secrets.APPSTORE_KEY_ID
+#   - secrets.APPSTORE_ISSUER_ID
+# Android Build Notes:
+# 
+
 name: Build Unity Project
 
 on:
@@ -223,7 +236,7 @@ jobs:
         with:
           targetPlatform: ${{ inputs.platform }}
           buildName: ${{ inputs.platform == 'iOS' && 'iOS' || inputs.platform }}
-          androidExportType: ${{ inputs.platform == 'Android' && 'androidAppBundle' || '' }}
+          androidExportType: ${{ inputs.platform == 'Android' && 'apk' || '' }}
           androidKeystoreName: ${{ inputs.platform == 'Android' && 'user.keystore' || '' }}
           androidKeystoreBase64: ${{ inputs.platform == 'Android' && secrets.ANDROID_KEYSTORE_BASE64 || '' }}
           androidKeystorePass: ${{ inputs.platform == 'Android' && secrets.ANDROID_KEYSTORE_PASS || '' }}
@@ -688,103 +701,7 @@ jobs:
           echo "IPA export completed"
           ls -la export/
       
-      # iOS: Diagnose bundle identifier collisions
-      - name: Diagnose bundle identifier collisions
-        if: inputs.platform == 'iOS'
-        run: |
-          cd build/iOS/iOS/export/
-          IPA_PATH="StashDemo.ipa"
-          
-          if [ ! -f "$IPA_PATH" ]; then
-            echo "ERROR: IPA file not found!"
-            exit 1
-          fi
-          
-          echo "=========================================="
-          echo "DIAGNOSING BUNDLE IDENTIFIER COLLISIONS"
-          echo "=========================================="
-          echo ""
-          
-          # Extract IPA to temporary directory
-          TEMP_DIR=$(mktemp -d)
-          echo "Extracting IPA to: $TEMP_DIR"
-          unzip -q "$IPA_PATH" -d "$TEMP_DIR/extracted"
-          
-          # Find the app bundle
-          APP_BUNDLE=$(find "$TEMP_DIR/extracted" -name "*.app" -type d | head -1)
-          if [ -z "$APP_BUNDLE" ]; then
-            echo "ERROR: Could not find app bundle in IPA"
-            exit 1
-          fi
-          
-          echo "App bundle found: $APP_BUNDLE"
-          echo ""
-          
-          # Get main app bundle ID
-          MAIN_BUNDLE_ID=$(plutil -extract CFBundleIdentifier raw "$APP_BUNDLE/Info.plist" 2>/dev/null || echo "")
-          echo "📱 Main App Bundle ID: $MAIN_BUNDLE_ID"
-          echo ""
-          
-          # Find all Info.plist files in the app bundle
-          echo "Searching for all Info.plist files..."
-          echo "----------------------------------------"
-          COLLISIONS_FOUND=0
-          
-          find "$APP_BUNDLE" -name "Info.plist" -type f | while read plist; do
-            RELATIVE_PATH="${plist#$APP_BUNDLE/}"
-            BUNDLE_ID=$(plutil -extract CFBundleIdentifier raw "$plist" 2>/dev/null || echo "")
-            
-            if [ -n "$BUNDLE_ID" ]; then
-              echo ""
-              echo "📍 Location: $RELATIVE_PATH"
-              echo "   Bundle ID: $BUNDLE_ID"
-              
-              if [ "$BUNDLE_ID" = "$MAIN_BUNDLE_ID" ]; then
-                echo "   ⚠️  COLLISION DETECTED - Same as main app!"
-                COLLISIONS_FOUND=1
-                
-                # Show more details about this file
-                echo "   Details:"
-                plutil -p "$plist" | grep -E "(CFBundleName|CFBundleExecutable|CFBundlePackageType)" | head -3 | sed 's/^/      /'
-              else
-                echo "   ✓ Unique bundle ID"
-              fi
-            else
-              echo ""
-              echo "📍 Location: $RELATIVE_PATH"
-              echo "   (No CFBundleIdentifier found)"
-            fi
-          done
-          
-          echo ""
-          echo "----------------------------------------"
-          echo "Summary of bundle structure:"
-          echo ""
-          echo "Frameworks:"
-          find "$APP_BUNDLE/Frameworks" -name "*.framework" -type d 2>/dev/null | while read fw; do
-            echo "  - $(basename "$fw")"
-          done
-          
-          echo ""
-          echo "Extensions:"
-          find "$APP_BUNDLE" -name "*.appex" -type d 2>/dev/null | while read ext; do
-            echo "  - $(basename "$ext")"
-          done
-          
-          echo ""
-          echo "PlugIns:"
-          find "$APP_BUNDLE/PlugIns" -name "*.appex" -type d 2>/dev/null | while read plugin; do
-            echo "  - $(basename "$plugin")"
-          done
-          
-          echo ""
-          echo "=========================================="
-          echo "Diagnostic complete. Check output above for collisions."
-          echo "=========================================="
-          
-          # Cleanup
-          rm -rf "$TEMP_DIR"
-      
+
       # iOS: Verify IPA
       - name: Verify IPA
         if: inputs.platform == 'iOS'
